Related: tdf#152250 Copy also style hierarchy

Change-Id: I134857c9a7749b0dd4a6fe6842dcc8c72d373f4d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149928
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>