sc/source/core/data/table2.cxx
@@ -695,13 +695,8 @@ void ScTable::CopyConditionalFormat( SCCOL nCol1, SCROW nRow1, SCCOL nCol2, SCRO
                     aStyleName = static_cast<const ScCondDateFormatEntry*>(pEntry)->GetStyleName();
 
                 if(!aStyleName.isEmpty())
-                {
-                    if(rDocument.GetStyleSheetPool()->Find(aStyleName, SfxStyleFamily::Para))
-                        continue;
-
                     rDocument.GetStyleSheetPool()->CopyStyleFrom(
-                            pTable->rDocument.GetStyleSheetPool(), aStyleName, SfxStyleFamily::Para );
-                }
+                            pTable->rDocument.GetStyleSheetPool(), aStyleName, SfxStyleFamily::Para, true );
             }
         }
 
